fixed overflow

--- a/src/client/components/Navigation/LanguageSettings.less
+++ b/src/client/components/Navigation/LanguageSettings.less
@@ -8,7 +8,6 @@
 
   &__option {
     height: 22px;
-    overflow: auto;
 
     &-selected {
       color: @primary-color;
